# DataVisualization

./: .clang-format  .gitignore  CMakeLists.txt  README.md
build-tools/: compilation-flags.cmake  format-code.sh
gui/: CMakeLists.txt  DicomReader.cpp  DicomReader.h  MCubes.h  MCubesAlgorithm.cpp  MCubesAlgorithm.h  MCubesAllConfigurations.cpp  MCubesAllConfigurations.h  MCubesAllConfigurations_init.cpp  MCubesConfigurationArray.cpp  MCubesConfigurationArray.h  MCubesConfigurationGenerator.cpp  MCubesCube.cpp  MCubesCube.h  MCubesData.cpp  MCubesData.h  MCubesGrid.cpp  MCubesGrid.h  MCubesRenderer.cpp  MCubesRenderer.h  MCubesSurface.cpp  MCubesSurface.h  MCubesTools.cpp  MCubesTools.h  MCubesWindow.cpp  MCubesWindow.h  main.cpp
gui/resources/: CMakeLists.txt  gui_resources.qrc
gui/third-parties/: qt5.cmake
gui/third_parties/: dcmtk.cmake
marching-cubes/: AllConfigs.cpp  AllConfigs.hpp  CMakeLists.txt  ConfigsGenerator.cpp  ConfigsGenerator.hpp  Cube.hpp  Geometry3D.hpp  MarchingCubes.cpp  MarchingCubes.hpp  Tensor3D.cpp  Tensor3D.hpp  Triangle.hpp
marching-cubes/tests/: benchmarkMarchingCubes.cpp  expectedIsoSurfaces.hpp  testConfigsGenerator.cpp  testCube.cpp  testMarchingCubes.cpp  testTensor3D.cpp
third-parties/: CMakeLists.txt  catch2.cmake.in  google-benchmark.cmake.in  google-test.cmake.in
third-parties/benchmark-main/: CMakeLists.txt
third-parties/benchmark-main/tests/: CMakeLists.txt  testBenchmark.cpp
third-parties/catch-main/: CMakeLists.txt  CatchApprox.hpp
utils/: CMakeLists.txt  Math.hpp  TinyArray.hpp  TinyPermutation.hpp  TinyVector.hpp  empty.cpp
utils/internal/: TinyContainer.hpp  TinyPermutation.hpp
utils/tests/: testMath.cpp  testTinyArray.cpp  testTinyContainer.cpp  testTinyPermutation.cpp  testTinyVector.cpp
